Use a VersionProvider rather than hard-coding the version information
This allows us to fetch the version from a properties file in the same
manner that we currently do in Janus.