@@ -4,7 +4,7 @@
 	<name>Unigrid Hedgehog</name>
 	<groupId>org.unigrid</groupId>
 	<artifactId>hedgehog</artifactId>
-	<version>1.0.0-SNAPSHOT</version>
+	<version>0.0.1-SNAPSHOT</version>
 	<packaging>jar</packaging>
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
@@ -202,8 +202,10 @@
 						-Dcoverage-classes=loaded
 						--add-exports org.unigrid.hedgehog/org.unigrid.hedgehog.jqwik=ALL-UNNAMED
 						--add-exports org.unigrid.hedgehog/org.unigrid.hedgehog.model.cdi=weld.core.impl
+						--add-exports org.unigrid.hedgehog/org.unigrid.hedgehog.model=info.picocli
                                                 --add-exports org.unigrid.hedgehog/org.unigrid.hedgehog.model.spork=com.fasterxml.jackson.databind
                                                 --add-exports org.unigrid.hedgehog/org.unigrid.hedgehog.model=com.fasterxml.jackson.databind
+						--add-exports org.unigrid.hedgehog/org.unigrid.hedgehog=info.picocli
 						--add-opens org.unigrid.hedgehog/org.unigrid.hedgehog=ALL-UNNAMED
 						--add-opens org.unigrid.hedgehog/org.unigrid.hedgehog=weld.core.impl
 						--add-opens org.unigrid.hedgehog/org.unigrid.hedgehog.server=ALL-UNNAMED
@@ -217,6 +219,11 @@
 						--add-opens org.unigrid.hedgehog/org.unigrid.hedgehog.model.producer=weld.core.impl
 						--add-opens org.unigrid.hedgehog/org.unigrid.hedgehog.jqwik=weld.core.impl
 						--add-opens org.unigrid.hedgehog/org.unigrid.hedgehog.command=weld.core.impl
+						--add-opens org.unigrid.hedgehog/org.unigrid.hedgehog.command=info.picocli
+						--add-opens org.unigrid.hedgehog/org.unigrid.hedgehog.command.cli=info.picocli
+						--add-opens org.unigrid.hedgehog/org.unigrid.hedgehog.command.option=info.picocli
+						--add-opens org.unigrid.hedgehog/org.unigrid.hedgehog.command.util=info.picocli
+
                                         </argLine>
 				</configuration>
 			</plugin>
@@ -324,6 +331,16 @@
 				<version>3.3.0</version>
 			</plugin>
 		</plugins>
+		<resources>
+			<resource>
+				<directory>src/main/resources-filtered</directory>
+				<filtering>true</filtering>
+			</resource>
+			<resource>
+				<directory>src/main/resources</directory>
+				<filtering>false</filtering>
+			</resource>
+		</resources>
 	</build>
 	<reporting>
 		<plugins>
